Add style, comments

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>reactic-toe</title>
   </head>
   <body>
-    <div id="root"></div>
+    <h1>reactic-toe</h1>
+    <div id="container">
+      <div id="root"></div>
+    </div>
     <script src="./dist/app.js"></script>
   </body>
 </html>
